--- a/test/normal-upload.html
+++ b/test/normal-upload.html
@@ -2,10 +2,76 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-
-
+<script src="http://a.b.c:10090/common/js/jquery-1.11.1.min.js" type="text/javascript"></script>
+<script src="upload.js" type="text/javascript"></script>
+<link rel="stylesheet" type="text/css" href="upload.css">
+</head>
 
 <body>
+<form id="uploadForm" method="post" enctype="multipart/form-data">
+<div class="content">
+    <div class="formSubmit">
+        <p class="title">提供最基本的form表单提交上传文件功能，请设定如下参数：</p>
+        <dl class="parameters">
+            <dt>图片上传url:</dt>
+            <dd class="clearfix"><input type="text" value="http://192.168.71.132:8080/upload" id="uploadUrl" /></dd>
+
+            <dt>上传大小:</dt>
+            <dd class="clearfix">
+                <input type="text" value="0" id="uploadSize" />
+                <select id="uploadSizeUnit">
+                    <option value="b">Byte</option>
+                    <option value="k">K</option>
+                    <option value="m">M</option>
+                </select>
+                <span>(默认单位为byte， 可选单位为K或M, 0表示不限制)</span>
+            </dd>
+            <dt>允许的后缀:</dt>
+            <dd class="clearfix">
+                <input type="text" value="*" id="allowSuffix" />
+                <span>(默认是*全部，可以输入多后缀，请用|隔开每一个后缀，比如jpg|gif|txt)</span>
+            </dd>
+
+            <dt>是否随机命名:</dt>
+            <dd class="clearfix">
+                <select id="randomName">
+                    <option value="yes">yes</option>
+                    <option value="no">no</option>
+                </select>
+                <span>(是否随机生成文件名，默认是yes随机生成)</span>
+            </dd>
+
+            <dt>图片存放路径：</dt>
+            <dd class="clearfix">
+                <input type="text" id="storePath" value="/home/maxim/Documents/poet/index/" />
+                <span>(请根据你服务器规划，设定你上传目录)</span>
+            </dd>
+
+            <dt>成功后回调页面地址：</dt>
+            <dd>
+                <input type="text" />
+                <span>(如果你有回调页面，请设定回调页面地址)</span>
+            </dd>
+        </dl>
+        <div class="upload-files">
+            <div><span>第一个上传的文件 ：&nbsp;&nbsp;&nbsp;</span><input type="file" name="uploadFile1"/></div>
+            <div><span>第一个上传的文件 ：&nbsp;&nbsp;&nbsp;</span><input type="file" name="uploadFile2"/></div>
+            <div><span>第一个上传的文件 ：&nbsp;&nbsp;&nbsp;</span><input type="file" name="uploadFile3"/></div>
+        </div>
+        <div class="submit-form">
+            <p class="urlPanel"></p>
+            <div>
+                <input type="button" value="查看提交url" id="viewUrl" />
+                <input type="button" value="点我上传" id="submitForm" />
+            </div>
+        </div>
+    </div>
+
+    <div>
+    </div>
+</div>
+</form>
+<!-- 
 <form action="http://192.168.71.132:8080/upload?size=300&suffix=jpg|gif|txt" method="post" enctype="multipart/form-data">
         <label for="file1">Filename:</label>
         <input type="file" id="file1" name="file1"></input>
@@ -17,5 +83,6 @@
         <input type="submit" value="submit"></input>
 
 </form>
+-->
 </body>
 </html>
