--- a/test/normal-callback.html
+++ b/test/normal-callback.html
@@ -107,18 +107,42 @@
             padding: 10px 10px;
             font-size: 20px;
             color: #fff;
+            border-left: 1px solid #000;
+            border-right: 1px solid #000;
         }
 
         .content-body {
             padding: 10px 10px;
             font-size: 16px;
+            border-bottom: 1px solid #000;
+            border-left: 1px solid #000;
+            border-right: 1px solid #000;
+        }
+
+        .content-body ul {
+
+        }
+
+        .callBackParams {
+            min-height: 100px;
+            font-size: 18px;
+        }
+
+        .callBackParams p {
+            margin-top: 10px;
+        }
+
+        .downloadList {
+            font-size: 18px;
         }
     </style>
 
     <script type="text/javascript">
         $(function ($) {
+            var accessUrl = "http://192.168.71.132:8080/download/";
+
             $.urlParam = function(name){
-                var results = new RegExp('[\?&]' + name + '=([^&#]*)').exec(window.location.href);
+                var results = new RegExp('[\?&]' + name + '=([^&#]*)').exec(decodeURI(window.location.href));
                 if (results==null){
                     return null;
                 }
@@ -127,13 +151,36 @@
                 }
             }
 
-            function setCallBackParams() {
-                var urlParam = $.urlParam('param');
-                console.log(urlParam);
+            function setCallBackParams(urlParam) {
                 $("#callBackParams").text(urlParam);
             }
 
-            setCallBackParams();
+            function initDownloadList(urlParam) {
+                var jsonParams = JSON.parse(urlParam);
+                if ( 1 == jsonParams["error"]) return;
+                var message = jsonParams["message"];
+                var snippet = "";
+                $.each(message, function (index, param) {
+                    var part = "<p>";
+                    part += "<em>"+ (index + 1) +". </em>";
+                    var href = accessUrl + param["filename"];
+                    part += "<a href=\"" + href + "\">" + param["filename"] + "</a>";
+                    part += "<span>&nbsp;&nbsp;&nbsp;"+ param["fileSize"] +"</span></p>";
+                    snippet += part;
+                })
+
+                $(".downloadList").append(snippet);
+            };
+
+
+            function initPage() {
+                var urlParam = $.urlParam('param');
+//                var urlParam = '{"error":1,"message": [{"fileSize":"11438bytes","filename":"39a070922bc0c0ec35965dbecf1da521b.jpg"}, {"fileSize":"11438bytes","filename":"39a070922bc0c0ec35965dbecf1da521b.jpg"}]}';
+                console.log(urlParam);
+                setCallBackParams(urlParam);
+                initDownloadList(urlParam);
+            }
+            initPage();
         });
 
     </script>
@@ -145,9 +192,35 @@
     </div>
     <div class="content-body">
         <ul>
-            <li>
-                <span>返回参数：</span>
-                <span id="callBackParams"></span>
+            <li class="callBackParams">
+                <span>upload返回参数展示：</span>
+                <hr/>
+                <p id="callBackParams"></p>
+            </li>
+
+            <li class="downloadList">
+                <p>下载列表：</p>
+                <hr/>
+
+                <!--
+                <p>
+                <em>1.</em>
+                <a href="http://192.168.71.132:8080/download/109885140f1cde5999a98a5eea0a1904b0ce561b1.jpg">109885140f1cde5999a98a5eea0a1904b0ce561b1.jpg</a>
+                <span>11438bytes</span>
+                </p>
+
+                <p>
+                    <em>2.</em>
+                    <a href="http://192.168.71.132:8080/download/109885140f1cde5999a98a5eea0a1904b0ce561b1.jpg">109885140f1cde5999a98a5eea0a1904b0ce561b1.jpg</a>
+                    <span>11438bytes</span>
+                </p>
+
+                <p>
+                    <em>3.</em>
+                    <a href="http://192.168.71.132:8080/download/icons0986b6c4308bd263d663d1da9f5eca6e.psd">icons0986b6c4308bd263d663d1da9f5eca6e.psd</a>
+                    <span>11438bytes</span>
+                </p>
+                -->
             </li>
         </ul>
 
