--- a/test/normal-upload.html
+++ b/test/normal-upload.html
@@ -11,7 +11,7 @@
 <form id="uploadForm" method="post" enctype="multipart/form-data">
 <div class="content">
     <div class="formSubmit">
-        <p class="title">提供最基本的form表单提交上传文件功能，请设定如下参数：</p>
+        <p class="title">此Demo提供最基本的form表单提交上传文件功能，请设定如下参数：</p>
         <dl class="parameters">
             <dt>图片上传url:</dt>
             <dd class="clearfix"><input type="text" value="http://192.168.71.132:8080/upload" id="uploadUrl" /></dd>
@@ -49,7 +49,7 @@
 
             <dt>成功后回调页面地址：</dt>
             <dd>
-                <input type="text" />
+                <input type="text" id="callback" value="http://192.168.71.132:8080/preview/normal-callback.html" />
                 <span>(如果你有回调页面，请设定回调页面地址)</span>
             </dd>
         </dl>
@@ -71,18 +71,5 @@
     </div>
 </div>
 </form>
-<!-- 
-<form action="http://192.168.71.132:8080/upload?size=300&suffix=jpg|gif|txt" method="post" enctype="multipart/form-data">
-        <label for="file1">Filename:</label>
-        <input type="file" id="file1" name="file1"></input>
-        <br/>
-
-        <label for="file2">Filename:</label>
-        <input type="file" id="file2" name="file2"></input>
-        <br/>
-        <input type="submit" value="submit"></input>
-
-</form>
--->
 </body>
 </html>
