--- a/test/form-upload-callback.html
+++ b/test/form-upload-callback.html
@@ -139,7 +139,7 @@
 
     <script type="text/javascript">
         $(function ($) {
-            var accessUrl = "http://192.168.71.132:8080/download/";
+            var accessUrl = "http://a.b.c:10089/poet-demo-download/";
 
             $.urlParam = function(name){
                 var results = new RegExp('[\?&]' + name + '=([^&#]*)').exec(decodeURI(window.location.href));
